5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1871_1714.log
== TEST (2019-07-02 16:00:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:02:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input(":"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:03:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input(":"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:03:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input("matriz:"))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:05:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input("matriz:"))

for i in range(shape(matriz))
-- ERROR:
File "XXXX", line 6
    for i in range(shape(matriz))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:05:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input("matriz:"))

for i in range(shape(matriz)):
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:05:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input("matriz:"))

for i in range(shape(matriz)):
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:05:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input("matriz:"))

for i in range(shape(matriz[0])):
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:05:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input("matriz:"))

for i in range(shape(matriz)[1]):
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:05:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input("matriz:"))

for i in range(matriz)
	
-- ERROR:
File "XXXX", line 6
    for i in range(matriz)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:06:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input("matriz:"))

for i in range(matriz):
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:06:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input("matriz:"))

for i in range(matriz):
	
	
-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:06:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input("matriz:"))

for i in range(shape(matriz))
	
	
-- ERROR:
File "XXXX", line 6
    for i in range(shape(matriz))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:07:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input("matriz:"))

for i in range(shape(matriz)):
	if matriz[0] > 0 
	
	
-- ERROR:
File "XXXX", line 7
    if matriz[0] > 0 
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:07:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input("matriz:"))

for i in range(shape(matriz)):
	if matriz[0] > 0:
		matriz[0]
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:08:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input("matriz:"))

for i in range(shape(matriz)):
	if matriz[0] > 0:
		matriz[0] = matriz[0] + 1
 	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:10:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input("matriz:"))

for i in range(shape[0])
 	
	
-- ERROR:
File "XXXX", line 6
    for i in range(shape[0])
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:10:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input("matriz:"))

for i in range((shape[0]))
 	
	
-- ERROR:
File "XXXX", line 6
    for i in range((shape[0]))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:10:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input("matriz:"))

for i in range((shape[0])):
	
 	
	
-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:10:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input("matriz:"))

for i in range(shape[0]):
	
 	
	
-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:10:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = eval(input("matriz:"))

for i in range(shape[0]):
	
	
 	
	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:13:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))

for i in range(shape[0]):
-- ERROR:
File "XXXX", line 7
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:14:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:16:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))

linha = matriz[0]
linha2 = matriz [1]
linha3 = matriz[2]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:16:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))

linha = matriz[0]
linha2 = matriz [1]
linha3 = matriz[2]

for i in range(shape(matriz)):

-- ERROR:
File "XXXX", line 11
    
                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:16:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))

linha = matriz[0]
linha2 = matriz [1]
linha3 = matriz[2]

for i in range(shape(matriz)):
	

-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:17:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))

linha = matriz[0]
linha2 = matriz [1]
linha3 = matriz[2]

print(linha+linha2 )
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:17:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))

linha = matriz[0]
linha2 = matriz [1]
linha3 = matriz[2]

print(linha+linha2 )
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:18:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))

linha = matriz(0)[0]
linha2 = matriz [1]
linha3 = matriz[2]


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:18:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))

linha = matriz(0)[0]
linha2 = matriz(0) [1]
linha3 = matriz(0)[2]


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:19:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))

linha = matriz(0)[0]
linha2 = matriz(0) [1]
linha3 = matriz(0)[2]

print(linha + linha2)


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:19:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))

linha = matriz[0]
linha2 = matriz[1]
linha3 = matriz[2]

print(linha + linha2)


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:19:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))

linha = matriz[0]
linha2 = matriz[1]
linha3 = matriz[2]

print(linha + linha2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))

linha = matriz[1]
linha2 = matriz[1]
linha3 = matriz[2]

print(linha + linha2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:21:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))

linha = matriz[1]
linha2 = matriz[1]
linha3 = matriz[1]

print(linha + linha2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:23:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))

linha = matriz[1]
linha2 = matriz[1]
linha3 = matriz[1]

print(linha + linha2)/3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:27:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))
somatorio = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		if (i == j):
			soma = soma = + matriz[i, j]
linha = matriz[1]
linha2 = matriz[1]
linha3 = matriz[1]

print(linha + linha2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:27:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))
somatorio = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		if (i == j):
			soma = soma = + matriz[i, j]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:27:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))
somatorio = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		if (i == j):
			soma = soma = + matriz[i, j]
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:27:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))
somatorio = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		if (i == j):
			soma = soma = + matriz[i, j]
print(soma)

-- EXECUTION TIME:
0.929926
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
---- correct output:
26.6
---- user output:
9.9
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
---- correct output:
17.5
---- user output:
2.7
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
---- correct output:
27.2
---- user output:
3.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:27:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))
somatorio = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		if (i == j):
			soma = soma = + matriz[i, j]
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))
somatorio = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		if (i == j):
			somatorio = somatorio + matriz[i, j]
print(somatorio)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:28:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))
somatorio = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		if (i == j):
			somatorio = somatorio + matriz[i, j]
print(somatorio)

-- EXECUTION TIME:
0.970334
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
---- correct output:
26.6
---- user output:
26.6
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
---- correct output:
17.5
---- user output:
17.5
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
---- correct output:
27.2
---- user output:
27.200000000000003
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))
somatorio = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		if (i == j):
			somatorio = somatorio + matriz[i, j]
print(somatorio)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:28:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))
somatorio = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		if (i == j):
			somatorio = somatorio + matriz[i, j]
print(somatorio)

-- EXECUTION TIME:
1.02301
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
---- correct output:
26.6
---- user output:
26.6
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
---- correct output:
17.5
---- user output:
17.5
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
---- correct output:
27.2
---- user output:
27.200000000000003
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))
somatorio = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		if (i == j):
			somatorio = somatorio + matriz[i, j]
print(somatorio)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:28:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))
somatorio = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		if (i == j):
			somatorio = somatorio + matriz[i, j]
print(somatorio)

-- EXECUTION TIME:
1.09213
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
---- correct output:
26.6
---- user output:
26.6
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
---- correct output:
17.5
---- user output:
17.5
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
---- correct output:
27.2
---- user output:
27.200000000000003
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:29:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))
somatorio = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		if (i == j):
			somatorio = somatorio + matriz[i, j]
print(somatorio)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:29:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))
somatorio = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		if (i == j):
			somatorio = somatorio + matriz[i, j]
print(somatorio)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:31:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))
somatorio = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		if (i == j):
			somatorio = somatorio + matriz[i, j]
print(round(somatorio))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:32:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))
somatorio = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		if (i == j):
			somatorio = somatorio + matriz[i, j]
print(round(somatorio,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:32:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz:")))
somatorio = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		if (i == j):
			somatorio = somatorio + matriz[i, j]
print(round(somatorio,2))

-- EXECUTION TIME:
0.898854
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
---- correct output:
26.6
---- user output:
26.6
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
---- correct output:
17.5
---- user output:
17.5
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
---- correct output:
27.2
---- user output:
27.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
